--- a/application/modules/backend/views/scripts/tags/index.phtml
+++ b/application/modules/backend/views/scripts/tags/index.phtml
@@ -87,11 +87,22 @@
                                         },
                                         tag_id: {
                                              title: 'Tag ID',
-                                             edit: false,
-                                             create:false
+                                             key: true,
+                                            create: false,
+                                            edit: false,
                                         },
                                         tag_name: {
                                             title: 'Tag Name',
+                                            width: '30%'
+                                        }
+                                        ,
+                                        tag_fullname: {
+                                            title: 'Tag Fullname',
+                                            width: '30%'
+                                        }
+                                        ,
+                                        tag_description: {
+                                            title: 'Tag Description',
                                             width: '30%'
                                         }
                                     }
