--- a/application/modules/backend/views/scripts/tags/index.phtml
+++ b/application/modules/backend/views/scripts/tags/index.phtml
@@ -103,7 +103,8 @@
                                         ,
                                         tag_description: {
                                             title: 'Tag Description',
-                                            width: '30%'
+                                            width: '30%',
+                                            type: 'textarea'
                                         }
                                     }
                                 }, function (data) { //opened handler
