--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -230,7 +230,7 @@ $this->inlineScript()->appendScript('
                                 <?= $this->form->embed_code ?>
                                 
                                 <?= $this->form->source_url ?>
-                                <?= $this->form->project_license_id ?>
+                                <?= $this->form->license_tag_id ?>
                                  <?php 
                                     if($this->project_id)
                                     {
