--- a/application/modules/default/views/scripts/product/viewscripts/input_select_license.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_select_license.phtml
@@ -19,6 +19,8 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+
+$licenseListHelper = new Default_View_Helper_FetchLicenseTags();
 ?>
 <div class="form-group">
   <div class="col-sm-12 margin-top-15">
@@ -31,11 +33,13 @@
     <select class="form-control product_select_license"
             id="<?= $this->escape($this->element->getName()) ?>"
             name="<?= $this->escape($this->element->getName()) ?>">
+        <option value=""></option>
         <?php
         // force $value to array so we can compare multiple values to multiple
         // options; also ensure it's a string for comparison purposes.
         $value = array_map('strval', (array)$this->element->getValue());
-        foreach ($this->element->getMultiOptions() as $opt_value => $opt_label) {
+        $tagList = $licenseListHelper->fetchList();
+        foreach ($tagList as $opt_value => $opt_label) {
             // selected?
             $opt = '';
             if (in_array((string)$opt_value, $value)) {
