--- a/application/modules/default/views/scripts/product/viewscripts/input_source_url.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_source_url.phtml
@@ -25,7 +25,7 @@
         <?php if ($this->element->isRequired()) { ?>
             <div class="small grey bold-font pull-left margin-right-5">*</div>
         <?php } ?>
-        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Source-Code or Repository (GitHub, GitLab, SourceForge, ...)</label>
+        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Source-Code Repository (GitHub, GitLab, SourceForge, ...)</label>
     </div>
     <div class="col-sm-12">
         <input placeholder="https://github.com/github-tools/github" 
