--- a/application/modules/default/views/scripts/product/viewscripts/input_select_license.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_select_license.phtml
@@ -27,7 +27,7 @@ $licenseListHelper = new Default_View_Helper_FetchLicenseTags();
       <?php if ($this->element->isRequired()) { ?>
         <div class="small grey bold-font pull-left margin-right-5">*</div>
       <?php } ?>
-    <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">License *a valid License needed for plings</label>
+    <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">License *a valid License is needed for plings</label>
   </div>
   <div class="col-sm-4">
     <select class="form-control product_select_license"
