--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -69,7 +69,7 @@
                                  <th><?= $this->translate('Description'); ?></th>
                             
                                  <th><?= $this->translate('Packagetype'); ?></th>
-                                 <th><?= $this->translate('License'); ?></th>
+                                 <!--<th><?= $this->translate('License'); ?></th>-->
                                  <th style="text-align: right"><?= $this->translate('Downloads'); ?></th>
                                  <th><?= $this->translate('Date'); ?></th>
 
@@ -348,11 +348,13 @@
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
+                                            /*
                                             + '<td>'
                                             + '<select id="data-select-license' + this.id + '" data-license-id="" name="license">'
                                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPLv2 or later</option><option value=\"18\">GPLv2 only</option><option value=\"19\">GPLv3</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                                             + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
                                             + '</td>'
+                                            */
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD') + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
@@ -399,7 +401,7 @@
                                             $("#data-updatepploadfile" + this.id).hide();
                                             $("#file-tag-os" + this.id).text($os);
                                         }
-
+                                        /*
                                         if ((typeof licenseId != 'undefined') && (licenseId != "")) {
                                             $("#data-select-license" + this.id + " option[value='" + licenseId + "']").attr('selected', 'selected');
                                             $licenseIdText = $("#data-select-license" + this.id + " option[value='" + licenseId + "']").text();
@@ -414,7 +416,7 @@
                                         }
 
                                         $("#data-select-license" + this.id).hide();
-
+                                        */
                                         if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
                                             $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").attr('selected', 'selected');
                                             $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
@@ -572,36 +574,38 @@
                                          $pploadCollection.find('table[data-ppload-files] tbody').append(
                                             '<tr' + greyText + '>'
                                             + '<td>' + downloadLink + '</td>'
-                                                + '<td>' + version + '</td>'
+                                            + '<td>' + version + '</td>'
                                             + '<td>' + fileDescription + '</td>'
                                             + '<td>' + this.type + '</td>'
-                                                + '<td>'
-                                                + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                                + '<option value=\"\"></option>'
-                                                + '<option value=\"2\">Android (APK)</option>'
-                                                + '<option value=\"1\">AppImage</option>'
-                                                + '<option value=\"9\">Arch</option>'
-                                                + '<option value=\"5\">Debian</option>'
-                                                + '<option value=\"8\">Electron-Webapp</option>'
-                                                + '<option value=\"7\">Flatpak</option>'
-                                                + '<option value=\"10\">open/Suse</option>'
-                                                + '<option value=\"3\">OS X compatible</option>'
-                                                + '<option value=\"11\">Redhat</option>'
-                                                + '<option value=\"6\">Snappy</option>'
-                                                + '<option value=\"12\">Source Code</option>'
-                                                + '<option value=\"4\">Windows executable</option>'
-                                                + '</select><span id="file-tag-packagetype'+this.id+'">'
-                                                + '</td>'
+                                            + '<td>'
+                                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
+                                            + '<option value=\"\"></option>'
+                                            + '<option value=\"2\">Android (APK)</option>'
+                                            + '<option value=\"1\">AppImage</option>'
+                                            + '<option value=\"9\">Arch</option>'
+                                            + '<option value=\"5\">Debian</option>'
+                                            + '<option value=\"8\">Electron-Webapp</option>'
+                                            + '<option value=\"7\">Flatpak</option>'
+                                            + '<option value=\"10\">open/Suse</option>'
+                                            + '<option value=\"3\">OS X compatible</option>'
+                                            + '<option value=\"11\">Redhat</option>'
+                                            + '<option value=\"6\">Snappy</option>'
+                                            + '<option value=\"12\">Source Code</option>'
+                                            + '<option value=\"4\">Windows executable</option>'
+                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                            + '</td>'
+                                            /*
                                             + '<td>'
                                             + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
                                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPLv2 or later</option><option value=\"18\">GPLv2 only</option><option value=\"19\">GPLv3</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                                             + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
                                             + '</td>'
+                                            */
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD')  + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
-                                                + '<td></td>'
-                                                + '<td></td>'
+                                            + '<td></td>'
+                                            + '<td></td>'
                                             + '</tr>'
                                          );
 
@@ -612,7 +616,7 @@
                                              $("#data-updatepploadfile" + this.id).hide();
                                              $("#file-tag-os" + this.id).text($os);
                                          }
-
+                                         /*
                                          if ((typeof licenseId != 'undefined') && (licenseId != "")) {
                                              $("#data-select-license" + this.id + " option[value='" + licenseId + "']").attr('selected', 'selected');
                                              $licenseIdText = $("#data-select-license" + this.id + " option[value='" + licenseId + "']").text();
@@ -627,8 +631,9 @@
                                          if ((typeof license != 'undefined') && (license != "")) {
                                              $("#file-tag-license-text" + this.id).text(license);
                                          }
+                                         */
 
-                                             if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
+                                         if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
                                              $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").attr('selected', 'selected');
                                              $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                              $("#data-select-packagetype" + this.id).hide();
@@ -682,7 +687,7 @@
 
                                  $pploadCollection.find('table[data-ppload-files] tfoot').append(
                                      '<tr>'
-                                     + '<th colspan="6">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
+                                     + '<th colspan="4">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
                                      + '<th style="text-align: right">' + downloaded_count_total + '</th>'
                                      + '<th></th>'
                                     + '<th style="text-align: right">' + fileSizeSum.toFixed(2) + ' MB</th>'
