--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -200,7 +200,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 
 <script type="application/javascript">
     $(document).ready(function () {
-        $('body').on('click', 'a.ajaxPartial', function (event) {
+        $('body').on('click', '.ajaxPartialFeatureProduct', function (event) {
             event.preventDefault();            
             $(this).off();                  
             var target = '#featureProductsContainer';  
