--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -32,6 +32,10 @@
   {
      background-color: #def;
   }
+  .carousel-indicators li.active
+  {
+     background-color: #2673b0;
+  }
 
 </style>
     <div id="featureProducts" style="height:100%" class="carousel slide" data-ride="carousel" data-interval="false">       
