--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -40,13 +40,13 @@
 </style>
     <div id="featureProducts" style="height:100%" class="carousel slide" data-ride="carousel" data-interval="false">       
 
-        <div id="featureProducts-content" style="height:100%;  padding-top: 30px;padding-bottom: 30px" class="carousel-inner">
+        <div id="featureProducts-content"  class="carousel-inner">
         <?php        
         foreach ($this->featureProducts as $this->product): ?>            
                     <div>                      
-                        <div style="width: 1000px; display: block;margin:0 auto; border:1px solid #DFDCDA; border-radius: 3px; background-color: white;">
+                        <div style="width: 800px; display: block;margin:0 auto; border:1px solid #DFDCDA; border-radius: 3px; background-color: white;">
                             <a style="float: left; margin-right: 20px" title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
-                               <img class="productimg " src="<?=$helpImage->Image($this->product['image_small'], array('width' => 500, 'height' => 300))?>"  style="width: 500px; max-height: 300px; "/>
+                               <img class="productimg " src="<?=$helpImage->Image($this->product['image_small'], array('width' => 500, 'height' => 300))?>"  style="width: 250px; max-height: 250px; "/>
                             </a>
                                <div class="" style="display:block; width:450px; float:right; margin-right:20px;padding-top: 10px">
                                <a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
@@ -73,16 +73,7 @@
                                 <span style="display: block; font-size: small;padding-top: 15px">                                  
                                         <?=$helpTruncate->truncate($this->product['description'], 400, '...', false, true)?>
                                 </span>
-                                <div class="rating" style="width: 100%;font-size: small;padding-top: 20px; ">
-                                    <?php                
-                                            $this->widgetRating = new stdClass();
-                                            $this->widgetRating->project_id = $this->product['project_id'];
-                                            $this->widgetRating->laplace_score = $this->product['laplace_score'];
-                                            $this->widgetRating->count_likes = $this->product['count_likes']; 
-                                            $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
-                                            echo $this->render('partials/widgetRating.phtml'); 
-                                    ?>
-                                </div>
+                                
                                 <span class="time text-center" style="font-size: small;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
                                 </span>
                                 </div>
