--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -89,10 +89,12 @@
         
       </div>
 
-           
+           <?php /*
        <?php if ($pageCount > 1) echo $this->paginationControl($this->featureProducts, 'Sliding', 'home/partials/paginationControl.phtml',
                     array('params' => array(), 'dom_target' => 'div#featureProductsContainer')); 
                     ?>
+                    */
+              ?>
         
     </div>
 
