--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -25,7 +25,7 @@
         $helpCategories = new Default_View_Helper_FetchCategoriesForProductAsString();
         $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
         $helpDate = new Default_View_Helper_PrintDate();
-        $pageCount = $this->featureProducts->count();
+        //$pageCount = $this->featureProducts->count();
 ?>
 <style type="text/css">
 
