--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -44,7 +44,10 @@
 
 </style>
     <div id="featureProducts" style="height:100%" class="carousel slide" data-ride="carousel" data-interval="false">       
-
+         <div style="float: right">
+                  <a type="button" class="btn btn-primary ajaxPartialFeatureProduct" href="/showfeatureajax/page/1">Random Feature Product</a> 
+                  
+         </div>
         <div id="featureProducts-content"  class="carousel-inner">
         <?php        
         foreach ($this->featureProducts as $this->product): ?>            
