--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -59,7 +59,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 <div class="GridFlex-cell content">   
         <div class="contentcontainer">
 
-                        <div class="row" style="height: 280px;" id="featureProductsContainer">
+                        <div class="row"  id="featureProductsContainer">
                             
                             <?php
                             if ($this->featureProducts) {        
