--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -91,7 +91,7 @@
 				text-decoration: underline;
 			}
 			.newsrow{
-				display: block;
+				display: flex;
 				width: 100%;
 			}
 			span.date{
@@ -99,7 +99,8 @@
 			}
 			span.newscomments{
 				font-size: smaller;  
-				float: right;
+				flex:1;
+				text-align: right;
 			}
 		}
 	}
