--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -93,6 +93,7 @@
 			.newsrow{
 				display: flex;
 				width: 100%;
+				padding-top: 3px;
 			}
 			span.date{
 				font-size: smaller; text-align:right
