--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -188,7 +188,7 @@
 				width:450px; 
 				float:right; 
 				margin-right:20px;
-				padding-top: 10px;
+				
 				.feature_text_title{
 					display: block; 
 					font-size: small;
@@ -234,6 +234,12 @@
 					position: relative;
 					bottom: 15px; 
 					right: 5px;
+				}
+			.label_featured{
+					display: block; 
+					float: right;
+					position: relative;
+					
 				}
 		}
 	}
