--- a/application/modules/default/views/scripts/home/partials/featured-products.phtml
+++ b/application/modules/default/views/scripts/home/partials/featured-products.phtml
@@ -33,45 +33,67 @@
         <?php        
         foreach ($this->featureProducts as $this->product): ?>            
                     <div style=" " class="feature_container">                      
-                        <span style="" class="feature_title"> Featured Product</span>
-                        <div style="" class="main_container">
-                            <a class="feature_image" style="" title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
-                               <img  src="<?=$helpImage->Image($this->product['image_small'], array('width' => 300, 'height' => 230 ,'crop' => 1))?>"  style=""/>
+                        
+                            <span  class="feature_title"> Featured Product</span>
+                         
+                        <div  class="main_container">
+                               
+                             <span class="small label label-info label_featured" style="float: right; <?php if($this->product['featured']<>1) echo 'visibility:hidden'; ?>">                                    
+                                    Featured
+                            </span>   
+                           
+
+                            <a class="feature_image"  title="<?=$helpTruncate->truncate($this->product['description'], 200, '...', false, true)?>" href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>">
+                               <img  src="<?=$helpImage->Image($this->product['image_small'], array('width' => 300, 'height' => 230 ,'crop' => 1))?>"  />
                             </a>
                                <div class="feature_text" >
                                <a href="<?=$helpProductUrl->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?></a>
-                               <span  class="feature_text_title" style=""><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
+                               <span  class="feature_text_title" ><?=$helpCategories->fetchCategoriesForProductAsString($this->product['project_id'])?> </span>
 
-                               <span class="feature_text_auth" style="">
-                               <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" style="">
+                               <div class="feature_text_auth" >
+                               <a  class="auto_link" href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']); ?>" >
                                    <figure >
-                                       <img src="<?php echo $helpImage->Image($this->product['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style=""/>
-                                   </figure>
-                                        
+                                       <img src="<?php echo $helpImage->Image($this->product['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" />
+                                   </figure>                                        
                                </a>
-                                  <span class="created_by" style=""> created by <?php echo $this->product['username']; ?> </span>
-                               </span>
+                                  <span class="created_by" > created by <?php echo $this->product['username']; ?> </span>
+
+                                  <div style="display: block;float: right; width: 80px;padding-right:10px;">
+                                        <div class="rating" style="font-size: small;">
+                                            <?php                
+                                                    $this->widgetRating = new stdClass();
+                                                    $this->widgetRating->project_id = $this->product['project_id'];
+                                                    $this->widgetRating->laplace_score = $this->product['laplace_score'];
+                                                    $this->widgetRating->count_likes = $this->product['count_likes']; 
+                                                    $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
+                                                    echo $this->render('partials/widgetRating.phtml'); 
+                                            ?>
+                                        </div>
+                                        <span class="time text-center" style="font-size: smaller;display: block"><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
+                                        </span>
+                                  </div>
+                               </div>
                               
 
-                                <span class="feature_text_comments" style="">
+                                <span class="feature_text_comments" >
                                 <?php                                    
                                     $count_comments = $this->product['count_comments'];                                                                        
                                     echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;                                    
                                 ?>
                                 </span>
                                 
-                                <span class="feature_text_description" style="">                                  
+                                <span class="feature_text_description" >                                  
                                         <?=$helpTruncate->truncate($this->product['description'], 300, '...', false, true)?>
                                 </span>
                                 
-                                <span class="time" style=""><?=$helpDate->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
-                                </span>
+                          
 
 
                                 </div>
                               
                                   <div style="clear: left"></div>
                                   <span class="button_next small">
+                                         <a type="button" class="ajaxPartialFeatureProduct" style="padding-right: 20px" href="/showfeatureajax/page/0">random</a>                                          
                                          <a type="button" class="ajaxPartialFeatureProduct" href="/showfeatureajax/page/1">next</a>                                          
                                  </span>   
 
