--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -188,7 +188,17 @@
 				width:450px; 
 				float:right; 
 				margin-right:20px;
-				
+				.feature_category{
+					width:340px;
+				}
+				.feature_rating{
+					flex: 1; 
+					text-align: right; 
+					width: 80px;
+					padding-right:10px;
+					padding-top: 10px;
+					font-size: smaller;
+				}
 				.feature_text_title{
 					display: block; 
 					font-size: small;
