--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1996,6 +1996,7 @@ ul.meta-nav-top
             td{
                padding: 3px;
                vertical-align: middle;
+               padding-left: 8px;
             }            
           }
           .btn{
