--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -679,12 +679,12 @@
                                  $pploadCollection.find('table[data-ppload-files] tfoot').append(
                                      '<tr>'
                                      + '<th colspan="4">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
-                                     + '<td style="text-align: right">' + downloaded_count_total + '</td>'
-                                     + '<td></td>'
-                                    + '<td style="text-align: right">' + fileSizeSum.toFixed(2) + ' MB</td>'
+                                     + '<th style="text-align: right">' + downloaded_count_total + '</th>'
+                                     + '<th></th>'
+                                    + '<th style="text-align: right">' + fileSizeSum.toFixed(2) + ' MB</th>'
                                      //+ '<th style="text-align: right">' + humanFileSize(fileSizeSum) + '</th>'
-                                     + '<td></td>'
-                                       + '<td></td>'
+                                     + '<th></th>'
+                                       + '<th></th>'
                                      + '</tr>'
                                  );
 
